initialized soundcloud API

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     
+    <script src="//connect.soundcloud.com/sdk.js"></script>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
+   <section class="user-info">
+       <a href="#" class="connect">Connect</a>
+       <p>Hi, your username is: <span id="username"></span></p>
+   </section>
     
 </body>
 </html>
