--- a/callback.html
+++ b/callback.html
@@ -4,7 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Connect with SoundCloud</title>
   </head>
-  <body onload="window.opener.setTimeout(window.opener.SC.connectCallback, 1)">
+  <body>
     <b style="text-align: center;">This popup should automatically close in a few seconds</b>
+    
+    <script type="text/javascript">
+        window.opener.SC.connectCallback.call(this);
+    </script>
   </body>
 </html>
