able to record and playback audio

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
        </ul>
    </section>
    
-   <section class="player">
-       <p id="play">Play</p>
-       <p id="stop">Stop</p>
+   <section class="recorder">
+       <p class="record-btn">Record</p>
+       <P class="stop-btn">Stop</P>
    </section>
+   
+   <section class="player"></section>
     
 </body>
 </html>
