--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
    </section>
    
    <section class="recorder">
-       <p class="record-btn">Record</p>
-       <P class="stop-btn">Stop</P>
+       <p class="record-btn m-btn">Record</p>
+       <P class="stop-btn m-btn">Stop</P>
+       <p class="play-btn m-btn">Play</p>
+       <p class="delete-btn m-btn">Delete</p>
    </section>
    
    <section class="player"></section>
