uploads a recording to soundcloud

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
        <P class="stop-btn m-btn">Stop</P>
        <p class="play-btn m-btn">Play</p>
        <p class="delete-btn m-btn">Delete</p>
+       <p class="upload-btn m-btn">Upload</p>
    </section>
    
    <section class="player"></section>
