uploads with non-real time progress

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
        <p class="play-btn m-btn">Play</p>
        <p class="delete-btn m-btn">Delete</p>
        <p class="upload-btn m-btn">Upload</p>
+       <p class="progress-bar"><span class="progress"></span></p>
    </section>
    
    <section class="player"></section>
