--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
        <p class="delete-btn m-btn">Delete</p>
        <p class="upload-btn m-btn">Upload</p>
        <p class="progress-bar"><span class="progress"></span></p>
+       <div class='track'></div>
    </section>
    
    <section class="player"></section>
