styled the rec button. picked some colors

--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
    </section>
    <section class="record-section">
         <div class="record-section-rel">
-            <div class="record-btn-outter">
-                <div class="record-btn"></div>
+            <div class="record-btn-1">
+               <div class="record-btn-2">
+                   <div class="record-btn-3">
+                       <div class="record-btn-4"></div>
+                   </div>
+               </div>
             </div>
         </div>
-
-       
-       <div class="progress-bar"><span class="progress"></span></div>
    </section>
    
    <section class="widget-section">
