working rcord buttons that dynamically change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
 <!--    <link rel="stylesheet" href="css/normalize.css">-->
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.20.0.css">
-<!--    <link rel="stylesheet" href="css/font-awesome.min.css">-->
+<!--    <link rel="stylesheet" href="/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -46,8 +46,7 @@
             <div class="record-btn-1">
                <div class="record-btn-2">
                    <div class="record-btn-3">
-                       <div class="record-btn-4">
-                       </div>
+                       <div class="record-btn-4"></div>
                        <div class="upload-btn">
                            <i class="fa fa-soundcloud"></i>
                        </div>
