uploads and embeds track with buttons. Added hover effects. Fixed form and now changes title of track

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
         <div class="controls">
             <form class="control-form">
-                <label for="track-id" class="form-text">Track Title</label>
-                <input type="text" class="track-name" id="track-id" placeholder="My Recording">
+                <label class="form-text">Track Title</label>
+                <input type="text" class="track-name" placeholder="My Recording">
             </form>
         </div>
    </section>
