--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             </a>
         </div>
         <div class="controls">
+           <div class="instructions">
+               <h1>Now, press record! When you are done press the stop button.</h1>
+               <h1>Then, you can post it on Soundcloud right here!</h1>
+           </div>
             <form class="control-form">
                 <label class="form-text">Track Title</label>
                 <input type="text" class="track-name" placeholder="My Recording">
@@ -48,7 +52,13 @@
                    <div class="record-btn-3">
                        <div class="record-btn-4"></div>
                        <div class="upload-btn">
-                           <i class="fa fa-soundcloud"></i>
+                           <i class="fa fa-cloud-upload"></i>
+                       </div>
+                       <div class="spinner">
+                           <i class="fa fa-spinner fa-pulse"></i>
+                       </div>
+                       <div class="complete">
+                           <i class="fa fa-check-circle"></i>
                        </div>
                    </div>
                </div>
