demo MVP ready for github publish

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                        <div class="complete">
                            <i class="fa fa-check-circle"></i>
                        </div>
+                       <div class="failed">
+                           <i class="fa fa-frown-o"></i>
+                       </div>
                    </div>
                </div>
             </div>
