making more secure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Soundcloud App</title>
     
 <!--    <link rel="stylesheet" href="css/normalize.css">-->
-    <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.20.0.css">
 <!--    <link rel="stylesheet" href="/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -31,7 +30,7 @@
                 <p class="text-connect">Connect to Soundcloud right here:</p>
             </div>
             <a href="#" class="connect">
-                <img class="sign-in-btn" src="http://connect.soundcloud.com/2/btn-connect-sc-l.png" />
+                <img class="sign-in-btn" src="/images/btn-connect-sc-l.png" />
             </a>
         </div>
         <div class="controls">
