--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="text-connect">Connect to Soundcloud right here:</p>
             </div>
             <a href="#" class="connect">
-                <img class="sign-in-btn" src="/images/btn-connect-sc-l.png" />
+                <img class="sign-in-btn" src="images/btn-connect-sc-l.png" />
             </a>
         </div>
         <div class="controls">
