changed log-in from an anchor to a div

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <h2 class="text-first">First things first!</h2>
                 <p class="text-connect">Connect to Soundcloud right here:</p>
             </div>
-            <a href="#" class="connect">
+            <div class="connect">
                 <img class="sign-in-btn" src="images/btn-connect-sc-l.png" />
-            </a>
+            </div>
         </div>
         <div class="controls">
            <div class="instructions">
