removed play and delete button for now. Also added update/info text as the state of the app changes to help the use through the process

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         </div>
         <div class="controls">
            <div class="instructions">
-               <h1>Now, press record! When you are done press the stop button.</h1>
-               <h1>Then, you can post it on Soundcloud right here!</h1>
+               <h1 class="info">Now, press record! When you are done press the stop button. Then, you can post it on Soundcloud right here!</h1>
            </div>
             <form class="control-form">
                 <label class="form-text">Track Title</label>
