fixing API authorizing uri and ssl stuff

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        </div>
         <div class="sign-in">
             <div class="sign-in-text">
-                <h2 class="text-first">First things first!</h2>
+                <h2 class="text-first">First thing's first!</h2>
                 <p class="text-connect">Connect to Soundcloud right here:</p>
             </div>
             <div class="connect">
@@ -63,7 +63,7 @@
             <div class="record-btn-1">
                <div class="record-btn-2">
                    <div class="record-btn-3">
-                       <div class="record-btn-4"></div>
+                       <div class="record-btn-main"></div>
                        <div class="upload-btn">
                            <i class="fa fa-cloud-upload"></i>
                        </div>
