Optimized background image, added text saying it can be slow, fixed app if form is left blank, and other little fixes

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <div class="greeting">
                 Hey <span class="username"></span>!</li>
             </div> 
-            <div class="help tooltip" title="This app currently is not supported by IE or Safari :(">
+            <div class="help tooltip" title="Microphone and Soundcloud account needed to use this app. Not currently supported by IE or Safari">
                 <i class="fa fa-question"></i>
             </div>
        </div>
         <div class="sign-in">
             <div class="sign-in-text">
-                <h2 class="text-first">First thing's first!</h2>
+                <h2 class="text-first"> First thing's first!</h2>
                 <p class="text-connect">Connect to Soundcloud right here:</p>
             </div>
             <div class="connect">
@@ -51,6 +51,7 @@
         <div class="controls">
            <div class="instructions">
                <h1 class="info">Now, press record! When you are done press the stop button. Then, you can post it on Soundcloud right here!</h1>
+               <h4 class="soundcloud-is-slow">&#40Sometimes, Soundcloud can be slow at processing&#41</h4>
            </div>
             <form class="control-form">
                 <label class="form-text">Track Title</label>
