minor style improvments

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            </div>
             <form class="control-form">
                 <label class="form-text">Track Title</label>
-                <input type="text" class="track-name" placeholder="My Recording">
+                <input type="text" class="track-name" placeholder="My Recording" autofocus=>
             </form>
         </div>
    </section>
